--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
     <title>KodBank</title>
+    <link rel="icon" type="image/png" href="/Bank-logo.png" />    
     <meta name="description" content="A Banking Application">
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Kodbank" />
 
     <!-- TODO: Update og:title to match your application name -->
     
     
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://pub-bb2e103a32db4e198524a2e9ed8f35b4.r2.dev/171ee67e-d850-4ac7-a7aa-38feb51da037/id-preview-260dfe14--0e42c9cc-b7c3-4c62-92e1-4d754942bc62.lovable.app-1771609952278.png">
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://pub-bb2e103a32db4e198524a2e9ed8f35b4.r2.dev/171ee67e-d850-4ac7-a7aa-38feb51da037/id-preview-260dfe14--0e42c9cc-b7c3-4c62-92e1-4d754942bc62.lovable.app-1771609952278.png">
-    <meta property="og:title" content="KodBank">
-  <meta name="twitter:title" content="KodBank">
-  <meta property="og:description" content="A Banking Application">
-  <meta name="twitter:description" content="A Banking Application">
-</head>
+    <meta property="og:image" content="/Bank-logo.png">
+    <meta name="twitter:title" content="KodBank">
+    <meta property="og:description" content="A Banking Application">
+    <meta name="twitter:description" content="A Banking Application">
+  </head>
 
   <body>
     <div id="root"></div>
